@@ -4,6 +4,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
@@ -14,19 +15,20 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import umc6.tom.alarm.converter.AlarmSetConverter;
 import umc6.tom.alarm.repository.AlarmSetRepository;
-import umc6.tom.apiPayload.ApiResponse;
 import umc6.tom.apiPayload.code.status.ErrorStatus;
 import umc6.tom.apiPayload.exception.handler.*;
 import umc6.tom.board.converter.BoardConverter;
-import umc6.tom.board.dto.BoardRequestDto;
 import umc6.tom.board.dto.BoardResponseDto;
 import umc6.tom.board.model.Board;
 import umc6.tom.board.model.BoardLike;
 import umc6.tom.board.repository.BoardLikeRepository;
 import umc6.tom.board.repository.BoardRepository;
+import umc6.tom.comment.dto.CommentBoardDto;
 import umc6.tom.comment.dto.LikeBoardDto;
 import umc6.tom.comment.dto.PinBoardDto;
+import umc6.tom.comment.model.Comment;
 import umc6.tom.comment.model.Pin;
+import umc6.tom.comment.repository.CommentRepository;
 import umc6.tom.comment.repository.PinRepository;
 import umc6.tom.common.model.Majors;
 import umc6.tom.common.model.Uuid;
@@ -38,13 +40,14 @@ import umc6.tom.user.converter.UserConverter;
 import umc6.tom.user.dto.ResignDtoReq;
 import umc6.tom.user.dto.UserDtoReq;
 import umc6.tom.user.dto.UserDtoRes;
+import umc6.tom.user.model.Prohibit;
 import umc6.tom.user.model.Resign;
 import umc6.tom.user.model.User;
 import umc6.tom.user.model.enums.Agreement;
+import umc6.tom.user.model.enums.Role;
 import umc6.tom.user.model.enums.UserStatus;
-import umc6.tom.user.repository.MajorsRepository;
-import umc6.tom.user.repository.ResignRepository;
-import umc6.tom.user.repository.UserRepository;
+import umc6.tom.user.model.mapping.ProhibitBoard;
+import umc6.tom.user.repository.*;
 import umc6.tom.util.AmazonS3Util;
 import umc6.tom.util.CookieUtil;
 import umc6.tom.util.RedisUtil;
@@ -82,11 +85,14 @@ public class UserServiceImpl implements UserService {
     private final BoardRepository boardRepository;
     private final PinRepository pinRepository;
     private final BoardLikeRepository boardLikeRepository;
+    private final CommentRepository commentRepository;
+    private final ProhibitRepository prohibitRepository;
+    private final ProhibitBoardRepository prohibitBoardRepository;
 
 
     // 회원 가입
     @Override
-    public User join(UserDtoReq.JoinDto request) {
+    public User join(@NotNull UserDtoReq.JoinDto request) {
 
         if (duplicatedNickName(request.getNickName())) {
             throw new UserHandler(ErrorStatus.USER_NICKNAME_DUPLICATED);
@@ -437,7 +443,7 @@ public class UserServiceImpl implements UserService {
 
         // 사진 변경
         if (request != null) {
-            log.info("requst != null");
+            log.info("request != null");
             try {
                 String uuid = UUID.randomUUID().toString();
                 Uuid savedUuid = uuidRepository.save(Uuid.builder().uuid(uuid).build());
@@ -474,6 +480,7 @@ public class UserServiceImpl implements UserService {
         user.setPic(DEFAULT_PROFILE_PATH);
     }
 
+    // 타인 프로필 조회
     @Override
     public UserDtoRes.FindProfileDto findProfile(Long userId) {
         User user = userRepository.findById(userId)
@@ -504,6 +511,7 @@ public class UserServiceImpl implements UserService {
         return UserConverter.findProfileRes(user,findProfileBoardDto,findProfilePinDto);
     }
 
+    // 타인 게시 글 조회
     @Override
     public Page<BoardResponseDto.FindUserBoardsDto> findProfileBoards(Long userId, Pageable adjustedPageable){
         User user = userRepository.findById(userId)
@@ -518,13 +526,15 @@ public class UserServiceImpl implements UserService {
         return new PageImpl<>(boardList, adjustedPageable, boardList.size());
     }
 
+    // 타인이 댓글단 글 조회
+    @Override
     public Page<BoardResponseDto.FindUserBoardsDto> findProfileComments(Long userId, Pageable adjustedPageable){
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
 
         Page<Pin> pagePinEntity = pinRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId(),adjustedPageable);
 
-        //map으로 Board를 조회하고 조회한 값들을 pagePin과 같이 dto에 넣는다.
+        //map 으로 Board 를 조회하고 조회한 값들을 pagePin 과 같이 dto 에 넣는다.
         List<BoardResponseDto.FindUserBoardsDto> boardsDto = pagePinEntity.stream()
                                     .distinct()
                                     .map(pin -> new PinBoardDto(pin,boardRepository.findAllById(pin.getBoard().getId())))
@@ -535,6 +545,7 @@ public class UserServiceImpl implements UserService {
 
     }
 
+    // 활동내역 전체 조회 (내가 쓴글,댓글 단글, 좋아요)
     @Override
     public Page<BoardResponseDto.HistoryDto> findHistoryAll(Long userId, Pageable pageable){
         User user = userRepository.findById(userId)
@@ -543,21 +554,21 @@ public class UserServiceImpl implements UserService {
         //자기가 쓴 글
         List<BoardResponseDto.HistoryDto> boardsDto = boardRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId()).stream()
                                         .map(board -> UserConverter.toHistoryRes(board, "내가 쓴 글", board.getCreatedAt()))
-                                        .collect(Collectors.toList());
+                                        .toList();
         //자기가 댓글 단 글
         List<BoardResponseDto.HistoryDto> pinBoardsDto = pinRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId()).stream()
                                         .map(pin -> new PinBoardDto(pin, boardRepository.findById(pin.getBoard().getId())
                                                 .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                                         .distinct()
                                         .map(pinBoardDto -> UserConverter.toHistoryRes(pinBoardDto.getBoard(), "댓글 단 글", pinBoardDto.getPin().getCreatedAt()))
-                                        .collect(Collectors.toList());
+                                        .toList();
         //자기가 좋아요 누른 글
         List<BoardResponseDto.HistoryDto> likeBoardsDto = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId()).stream()
                                         .map(like -> new LikeBoardDto(like, boardRepository.findById(like.getBoard().getId())
                                                 .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                                         .distinct()
                                         .map(likeBoardDto -> UserConverter.toHistoryRes(likeBoardDto.getBoard(), "좋아요 단 글",likeBoardDto.getLike().getCreatedAt()))
-                                        .collect(Collectors.toList());
+                                        .toList();
 
         // 세 개의 리스트를 합치고 시간 순으로 정렬
         List<BoardResponseDto.HistoryDto> mergedList = Stream.concat(Stream.concat(boardsDto.stream(), pinBoardsDto.stream()), likeBoardsDto.stream())
@@ -572,6 +583,7 @@ public class UserServiceImpl implements UserService {
         return new PageImpl<>(mergedList.subList(start, end), pageable, mergedList.size());
     }
 
+    // 내가 쓴글 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findMyBoards(Long userId, Pageable adjustedPageable) {
         User user = userRepository.findById(userId)
@@ -587,6 +599,7 @@ public class UserServiceImpl implements UserService {
         return new PageImpl<>(historyDtoList, adjustedPageable, boardPage.getTotalElements());
     }
 
+    // 내가 쓴 댓글 글 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findMyComments(Long userId, Pageable adjustedPageable) {
         User user = userRepository.findById(userId)
@@ -594,24 +607,45 @@ public class UserServiceImpl implements UserService {
 
         // 자기가 댓글 단 글
         Page<Pin> pinPage = pinRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId(), adjustedPageable);
+        Page<Comment> commentPage = commentRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId(), adjustedPageable);
 
+        // 댓글 단 글
         List<BoardResponseDto.HistoryDto> pinBoardsDto = pinPage.stream()
                 .map(pin -> new PinBoardDto(pin, boardRepository.findById(pin.getBoard().getId())
                         .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                 .distinct()
-                .map(pinBoardDto -> UserConverter.toHistoryRes(pinBoardDto.getBoard(), "댓글 단 글", pinBoardDto.getPin().getCreatedAt()))
+                .map(pinBoardDto -> UserConverter.toHistoryCommentRes(pinBoardDto.getBoard(), "댓글 단 글", pinBoardDto.getPin().getCreatedAt(), pinBoardDto.getPin().getComment()))
+                .toList();
+
+        // 대댓글 단 글
+        List<BoardResponseDto.HistoryDto> commentBoardsDto = commentPage.stream()
+                .map(comment -> new CommentBoardDto(comment, boardRepository.findById(comment.getPin().getBoard().getId())
+                        .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
+                .distinct()
+                .map(commentBoardDto -> UserConverter.toHistoryCommentRes(commentBoardDto.getBoard(), "댓글 단 글", commentBoardDto.getComment().getCreatedAt(), commentBoardDto.getComment().getComment()))
+                .toList();
+
+        // 두 리스트 합치기
+        List<BoardResponseDto.HistoryDto> combinedList = new ArrayList<>();
+        combinedList.addAll(pinBoardsDto);
+        combinedList.addAll(commentBoardsDto);
+
+        // 최신순으로 정렬
+        List<BoardResponseDto.HistoryDto> sortedList = combinedList.stream()
+                .sorted(Comparator.comparing(BoardResponseDto.HistoryDto::getCreatedAt).reversed())
                 .collect(Collectors.toList());
 
-        return new PageImpl<>(pinBoardsDto, adjustedPageable, pinPage.getTotalElements());
+        return new PageImpl<>(sortedList, adjustedPageable, sortedList.size());
     }
 
+    // 내가 좋아요 단 글 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findMyLikes(Long userId, Pageable adjustedPageable) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
 
         //자기가 좋아요 누른 글
-        Page<BoardLike> likePage = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId(),adjustedPageable);
+        List<BoardLike> likePage = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId(),adjustedPageable);
 
         List<BoardResponseDto.HistoryDto> LikeBoardsDto = likePage.stream()
                                     .map(like -> new LikeBoardDto(like, boardRepository.findById(like.getBoard().getId())
@@ -620,9 +654,160 @@ public class UserServiceImpl implements UserService {
                                     .map(likeBoardDto -> UserConverter.toHistoryRes(likeBoardDto.getBoard(), "좋아요 단 글",likeBoardDto.getLike().getCreatedAt()))
                                     .collect(Collectors.toList());
 
-        return new PageImpl<>(LikeBoardsDto, adjustedPageable, likePage.getTotalElements());
+        return new PageImpl<>(LikeBoardsDto, adjustedPageable, likePage.size());
     }
 
+    // 활동내역 전체 검색 조회 (내가 쓴글,댓글 단글, 좋아요)
+    @Override
+    public Page<BoardResponseDto.HistoryDto> findTextHistoryAll(Long userId, Pageable adjustedPageable,String content){
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
 
+        //자기가 쓴 글
+        List<BoardResponseDto.HistoryDto> boardsDto = boardRepository.findAllByUserIdAndContentContainingOrUserIdAndTitleContainingOrderByCreatedAtDesc(user.getId(),content,user.getId(),content,adjustedPageable).stream()
+                .map(board -> UserConverter.toHistoryRes(board, "내가 쓴 글", board.getCreatedAt()))
+                .toList();
+        //자기가 댓글 단 글
+        List<BoardResponseDto.HistoryDto> pinBoardsDto = pinRepository.findAllByUserIdAndCommentContainingOrderByCreatedAtDesc(user.getId(),content, adjustedPageable).stream()
+                .map(pin -> new PinBoardDto(pin, boardRepository.findById(pin.getBoard().getId())
+                        .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
+                .distinct()
+                .map(pinBoardDto -> UserConverter.toHistoryCommentRes(pinBoardDto.getBoard(), "댓글 단 글", pinBoardDto.getPin().getCreatedAt(), pinBoardDto.getPin().getComment()))
+                .toList();
+        // 대댓글 단 글 섞기
+        List<BoardResponseDto.HistoryDto> commentBoardsDto = commentRepository.findAllByUserIdAndCommentContainingOrderByCreatedAtDesc(user.getId(),content, adjustedPageable).stream()
+                .map(comment -> new CommentBoardDto(comment, boardRepository.findById(comment.getPin().getBoard().getId())
+                        .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
+                .distinct()
+                .map(commentBoardDto -> UserConverter.toHistoryCommentRes(commentBoardDto.getBoard(), "댓글 단 글", commentBoardDto.getComment().getCreatedAt(), commentBoardDto.getComment().getComment()))
+                .toList();
+        //자기가 좋아요 누른 글
+        List<BoardResponseDto.HistoryDto> likeBoardsDto = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId(), adjustedPageable).stream()
+                .map(like -> {
+                    Board board = boardRepository.findById(like.getBoard().getId())
+                            .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND));
+                    if(board.getContent().contains(content) || board.getTitle().contains(content)){
+                            return new LikeBoardDto(like, board);
+                    }
+                    return null;
+                })
+                .filter(Objects::nonNull)
+                .distinct()
+                .map(likeBoardDto -> UserConverter.toHistoryRes(likeBoardDto.getBoard(), "좋아요 단 글",likeBoardDto.getLike().getCreatedAt()))
+                .toList();
 
+        // 세 개의 리스트 합치기
+        List<BoardResponseDto.HistoryDto> combinedList = new ArrayList<>();
+        combinedList.addAll(boardsDto);
+        combinedList.addAll(pinBoardsDto);
+        combinedList.addAll(likeBoardsDto);
+        combinedList.addAll(commentBoardsDto);
+
+        // 최신순으로 정렬
+        List<BoardResponseDto.HistoryDto> sortedList = combinedList.stream()
+                .sorted(Comparator.comparing(BoardResponseDto.HistoryDto::getCreatedAt).reversed())
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(sortedList, adjustedPageable, sortedList.size());
+    }
+
+    // 활동내역 내가쓴글 검색 조회
+    @Override
+    public Page<BoardResponseDto.HistoryDto> findTextHistoryBoards(Long userId, Pageable adjustedPageable, String content){
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        //자기가 쓴 글
+        List<BoardResponseDto.HistoryDto> boardsDto = boardRepository.findAllByUserIdAndContentContainingOrUserIdAndTitleContainingOrderByCreatedAtDesc(user.getId(),content,user.getId(),content,adjustedPageable).stream()
+                .map(board -> UserConverter.toHistoryRes(board, "내가 쓴 글", board.getCreatedAt()))
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(boardsDto, adjustedPageable, boardsDto.size());
+    }
+
+    // 활동내역 댓글 검색 조회
+    @Override
+    public Page<BoardResponseDto.HistoryDto> findTextHistoryComments(Long userId, Pageable adjustedPageable, String content) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        //자기가 댓글 단 글
+        List<BoardResponseDto.HistoryDto> pinBoardsDto = pinRepository.findAllByUserIdAndCommentContainingOrderByCreatedAtDesc(user.getId(),content, adjustedPageable).stream()
+                .map(pin -> new PinBoardDto(pin, boardRepository.findById(pin.getBoard().getId())
+                        .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
+                .distinct()
+                .map(pinBoardDto -> UserConverter.toHistoryCommentRes(pinBoardDto.getBoard(), "댓글 단 글", pinBoardDto.getPin().getCreatedAt(), pinBoardDto.getPin().getComment()))
+                .toList();
+        // 대댓글 단 글 섞기
+        List<BoardResponseDto.HistoryDto> commentBoardsDto = commentRepository.findAllByUserIdAndCommentContainingOrderByCreatedAtDesc(user.getId(),content, adjustedPageable).stream()
+                .map(comment -> new CommentBoardDto(comment, boardRepository.findById(comment.getPin().getBoard().getId())
+                        .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
+                .distinct()
+                .map(commentBoardDto -> UserConverter.toHistoryCommentRes(commentBoardDto.getBoard(), "댓글 단 글", commentBoardDto.getComment().getCreatedAt(), commentBoardDto.getComment().getComment()))
+                .toList();
+
+        List<BoardResponseDto.HistoryDto> combinedList = new ArrayList<>();
+        combinedList.addAll(commentBoardsDto);
+        combinedList.addAll(pinBoardsDto);
+
+        List<BoardResponseDto.HistoryDto> sortedList = combinedList.stream()
+                .sorted(Comparator.comparing(BoardResponseDto.HistoryDto::getCreatedAt).reversed())
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(sortedList, adjustedPageable, sortedList.size());
+    }
+
+    // 활동내역 좋아요 검색 조회
+    @Override
+    public Page<BoardResponseDto.HistoryDto> findTextHistoryLikes(Long userId, Pageable adjustedPageable, String content) {
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        //자기가 좋아요 누른 글
+        List<BoardResponseDto.HistoryDto> likeBoardsDto = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId(), adjustedPageable).stream()
+                .map(like -> {
+                    Board board = boardRepository.findById(like.getBoard().getId())
+                            .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND));
+                    if(board.getContent().contains(content) || board.getTitle().contains(content)){
+                        return new LikeBoardDto(like, board);
+                    }
+                    return null;
+                })
+                .filter(Objects::nonNull)
+                .distinct()
+                .map(likeBoardDto -> UserConverter.toHistoryRes(likeBoardDto.getBoard(), "좋아요 단 글",likeBoardDto.getLike().getCreatedAt()))
+                .collect(Collectors.toList());
+
+        return new PageImpl<>(likeBoardsDto, adjustedPageable, likeBoardsDto.size());
+    }
+
+    // 경고 부여
+    @Override
+    public UserDtoRes.warnDto warn(Long userId, Long targetUserId, UserDtoReq.WarnsDto request) {
+
+        User manager = userRepository.findById(userId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        if (!manager.getRole().equals(Role.ADMIN)) {
+            throw new AdminHandler(ErrorStatus.NOT_ADMIN);
+        }
+
+        User user = userRepository.findById(targetUserId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        Prohibit prohibit = prohibitRepository.findById(targetUserId)
+                .orElseThrow(() -> new ProhibitHandler(ErrorStatus.PROHIBIT_NOT_FOUND));
+
+        prohibit.setDivision(request.getDivision());
+
+        List<Board> boards = boardRepository.findByIdIn(request.getBoardIds());
+        boards.forEach(board -> prohibitBoardRepository.save(ProhibitBoard.builder()
+                .board(board)
+                .prohibit(prohibit)
+                .build()));
+
+        user.setWarn(user.getWarn() + 1);
+
+        return UserConverter.toWarnDto(targetUserId, user.getNickName(), request.getMessage());
+    }
 }
